# _01_web

./: .gitignore  ARCHITECTURE_UPDATE.md  CODE_OPTIMIZATION_PLAN.md  CODE_REFACTORING_GUIDE.md  DATA_README.md  DECODE_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  INTERACTIVE_FEATURES.md  MIGRATION_COMPLETE.md  NPM_GUIDE.md  NPM_SETUP_COMPLETE.md  README.md  TIMELINE_FEATURE.md  UPDATES.md  UPLOAD_SUMMARY.md  USAGE_GUIDE.md  batch_process.py  claude.md  clean_git_history.bat  exp1.ipynb  lup_ma20_filtered.parquet  open.py  requirements.txt  run-rust-convert.bat  run_batch.bat  run_viewer.bat  start-dev.bat  start-parquet.bat  start_dev.bat  test.py  test_data_structure.py  test_decode.py  upload_to_github.bat  web_viewer.py
.claude/: settings.local.json
docs/: README.md
frontend/: index.html
frontend-app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-app/src/: App.tsx
frontend-app/src-tauri/: Cargo.toml  tauri.conf.json
processed_data/20251031/: 1503.parquet  1514.parquet  1519.parquet  2368.parquet  2485.parquet  2612.parquet  2615.parquet  (+14 more)
rust/: .gitignore  Cargo.toml  README.md  build-and-run.bat  build.bat  test_parquet.rs
scripts/: DECODE_SUMMARY.md  README.md  README_DECODE.md  batch_decode.py  convert_to_json.py  data_convert.py  decode_quotes.py  decode_quotes_correct.py  get_single_stock_data.py  preprocess.py  query_stock.py  run_preprocess.bat  test_decode_both.py  test_decode_single.py
server/: README.md
server/rust/: Cargo.toml  build.bat
server/rust/src/: main.rs
templates/: viewer.html
(+109 files in other folders)
